# FractureOS

./: .clang-format  .clangd  .editorconfig  .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  setup.ps1  setup.sh
.github/workflows/: ci.yml
boot/: boot.asm
docs/: ARCHITECTURE.md  BUILD.md  CI_FIXES.md  CONTRIBUTING.md  PROJECT_STATUS.md  QUICK_START.md  ROADMAP.md  SETUP.md
kernel/: Cargo.toml  linker.ld  x86_64-unknown-none.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  interrupts.rs  lib.rs  memory.rs  serial.rs  vga.rs
lib/libfracture/include/: crt0.h  io.h  memory.h  process.h  string.h  syscall.h  types.h
tools/: create-iso.sh
userspace/: Makefile
userspace/init/: Makefile  main.cpp
userspace/shell/: Makefile  shell.cpp
