[package]
name = "fracture-kernel"
version = "0.1.1"
edition = "2021"
authors = ["FractureOS Team"]

[dependencies]
spin = "0.9"
volatile = "0.5"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"
x86_64 = "0.14"
uart_16550 = "0.3"
pic8259 = "0.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[lib]
crate-type = ["staticlib"]
